package com.designpattern.behavioral.command.commands;

/**
 * @Auther: ZhengHuaJing
 * @Date: 2020/10/14 10:26
 * @Description:
 */
public interface Command {
    void execute();
}
